# tralloc

./: .gitignore  CMakeLists.txt  COPYING.LESSER  CPackConfig.cmake  LICENSE  README  README.rst  combinations.sh  format_sources  reformat_sources  test-all.sh
cmake/checks/basic/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  destructor.c  helpers.c  reference.c  tree.c  utils.c
examples/basic/: CMakeLists.txt  main.c
examples/destructor/: CMakeLists.txt  main.c
examples/destructors/: CMakeLists.txt  main.c
examples/helpers/: CMakeLists.txt  main.c
examples/length/: CMakeLists.txt  main.c
examples/pool/: CMakeLists.txt  main.c
examples/reference/: CMakeLists.txt  main.c
examples/references/: CMakeLists.txt  main.c
examples/utils/: CMakeLists.txt  main.c
man/: CMakeLists.txt  talloc2.txt  tralloc.txt
src/talloc/: CMakeLists.txt  config.h.in  events.c  events.h  ext.c  ext.h  externs.c  helpers.c  helpers.h  tree.c  tree.h  types.h
src/talloc/ext/: CMakeLists.txt  destructor.c  destructor.h  length.c  length.h
src/talloc2/: CMakeLists.txt  chunk.c  chunk.h  common.c  common.h  config.h  config.h.in  data.c  data.h  destructor.c  destructor.h  events.c  events.h  ext.c  ext.h  helpers.c  helpers.h  tree.c  tree.h  types.h
src/talloc2/ext/: CMakeLists.txt  chunk.c  chunk.h  core.c  core.h  destructor.c  destructor.h  length.c  length.h  main.c  main.h
src/talloc2/extensions/: CMakeLists.txt  chunk.c  chunk.h  destructor.c  destructor.h
src/talloc2/reference/: CMakeLists.txt  chunk.c  chunk.h  main.c  main.h
src/talloc2/utils/: CMakeLists.txt  buffer.c  buffer.h  dynarr.c  dynarr.h  list.c  list.h  stack.c  stack.h
src/tralloc/: CMakeLists.txt  chunk.c  chunk.h  collect.c  common.c  common.h  config.h  config.h.in  context.c  context.h  debug.h  destructor.c  destructor.h  destructors.h  events.c  events.h  extensions.c  extensions.h  helpers.c  helpers.h  length.h  macro.h  pool.h  reference.h  references.h  tree.c  tree.h  tree_with_extensions.c  tree_without_extensions.c  types.h
src/tralloc/debug/: CMakeLists.txt  callback.c  callback.h  callbacks.c  callbacks.h  chunk.c  chunk.h  common.c  common.h  events.c  events.h  main.c  main.h  stats.c  stats.h  threads.c  threads.h
src/tralloc/debug/callbacks/: CMakeLists.txt  lock.c  lock.h  main.c  main.h
src/tralloc/debug/log/: main.c  main.h
src/tralloc/debug/stats/: lock.c  lock.h  main.c  main.h
src/tralloc/debug/threads/: CMakeLists.txt  chunk.c  chunk.h  lock.c  lock.h  main.c  main.h
src/tralloc/destructor/: CMakeLists.txt  append.c  append.h  chunk.c  chunk.h  clear.c  clear.h  common.c  common.h  delete.c  delete.h  destructors.c  destructors.h  main.c  main.h
src/tralloc/destructors/: CMakeLists.txt  append.c  append.h  chunk.c  chunk.h  clear.c  clear.h  data.c  data.h  delete.c  delete.h  destructors.c  destructors.h
src/tralloc/extensions/: CMakeLists.txt  chunk.c  chunk.h  destructor.c  destructor.h
src/tralloc/helpers/: CMakeLists.txt  file.c  file.h  string.c  string.h
src/tralloc/helpers/string/: CMakeLists.txt  extensions.c  extensions.h  pure.c  pure.h
src/tralloc/length/: CMakeLists.txt  chunk.c  chunk.h  common.c  common.h  data.c  data.h  get.c  main.c  main.h
src/tralloc/lock/: CMakeLists.txt  chunk.c  chunk.h  common.c  common.h
src/tralloc/pool/: CMakeLists.txt  chunk.c  chunk.h  common.c  common.h  fragment.c  fragment.h  head_chunk.c  head_chunk.h  lock.c  lock.h  pool.c  pool.h  pool_child.c  pool_child.h  pool_child_data.c  pool_child_data.h  pool_data.c  pool_data.h
src/tralloc/reference/: CMakeLists.txt  chunk.c  chunk.h  clear.c  clear.h  common.c  common.h  head_chunk.c  head_chunk.h  main.c  main.h  move.c  move.h  reference.c  reference.h  references.c  references.h
src/tralloc/references/: CMakeLists.txt  chunk.c  chunk.h  clear.c  clear.h  move.c  move.h  reference.c  reference.h  reference_data.c  reference_data.h  references.c  references.h  references_data.c  references_data.h
src/tralloc/tests/: CMakeLists.txt
src/tralloc/tests/basic/: CMakeLists.txt  add.c  common.h  errors.c  (+4 more)
src/tralloc/threads/: CMakeLists.txt  chunk.c  chunk.h  lock.c  lock.h  mutex.c  mutex.h  spinlock.c  spinlock.h
src/tralloc/tree/: CMakeLists.txt  alloc.c  alloc.h  chunk.c  chunk.h  common.c  common.h  extensions.c  extensions.h  free.c  free.h  move.c  move.h  pure.c  pure.h  realloc.c  realloc.h
src/tralloc/utils/: CMakeLists.txt  buffer.c  buffer.h  dynarr.c  dynarr.h
tests/: 01-basic.c  02-helpers.c  03-ext.c  04-utils.c  CMakeLists.txt
tests/basic/: CMakeLists.txt  add.c  common.h  errors.c  free_subtree.c  main.c  move.c  move_and_resize.c  resize.c  test.c
tests/debug/: CMakeLists.txt  add.c  common.h  free.c  main.c  move.c  resize.c  test.c
tests/debug/threads/: CMakeLists.txt  add.c  common.h  main.c  resize.c
tests/destructor/: CMakeLists.txt  common.c  common.h  destructor.c  destructor.h  errors.c  main.c  test.c
tests/events/: CMakeLists.txt  add.c  add.h  common.h  free.c  free.h  main.c  move.c  move.h  resize.c  resize.h  test.c
tests/ext/: destructor.c  destructor.h  length.h  main.c
tests/extensions/: destructor.c  destructor.h  main.c
tests/helpers/: CMakeLists.txt  common.h  file.c  file.h  main.c  str.c  str.h  test.c
tests/length/: CMakeLists.txt  basic.c  common.c  common.h  destructor.c  errors.c  length.c  main.c  reference.c  test.c
tests/lib/: malloc_dynarr.c  malloc_dynarr.h
tests/pool/: CMakeLists.txt  add.c  common.h  errors.c  free.c  main.c  move.c  resize.c  test.c
tests/pool-root/: CMakeLists.txt  main.c
tests/pool/resize/: CMakeLists.txt  common.h  fragments_order.c  left.c  main.c  order.c  overflow.c  right.c
tests/reference/: CMakeLists.txt  add.c  common.c  common.h  errors.c  free_subtree.c  main.c  move_and_resize.c  shared.c  shared.h  specs.c  test.c
tests/threads/: CMakeLists.txt
tests/threads/basic/: CMakeLists.txt  add.c  common.h  main.c  test.c
tests/utils/: CMakeLists.txt  buffer.c  buffer.h  common.h  dynarr.c  dynarr.h  list.h  main.c  malloc_dynarr.h  test.c
(+250 files in other folders)
