set (TREE tree.c)
set (HELPERS helpers.c)
set (DESTRUCTOR destructor.c)
set (REFERENCE reference.c)
set (UTILS utils.c)

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-example-tree)
    add_executable (${NAME} ${TREE})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
    
    set (NAME ${TRALLOC_TARGET}-example-helpers)
    add_executable (${TRALLOC_TARGET}-example-helpers ${HELPERS})
    target_link_libraries (${TRALLOC_TARGET}-example-helpers ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
    
    if (${TRALLOC_DESTRUCTOR})
        set (NAME ${TRALLOC_TARGET}-example-destructor)
        add_executable (${NAME} ${DESTRUCTOR})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
    if (${TRALLOC_REFERENCE})
        set (NAME ${TRALLOC_TARGET}-example-reference)
        add_executable (${NAME} ${REFERENCE})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
    if (${TRALLOC_UTILS})
        set (NAME ${TRALLOC_TARGET}-example-utils)
        add_executable (${NAME} ${UTILS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-example-tree)
    add_executable (${NAME} ${TREE})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
    
    set (NAME ${TRALLOC_TARGET}-static-example-helpers)
    add_executable (${NAME} ${HELPERS})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
    
    if (${TRALLOC_DESTRUCTOR})
        set (NAME ${TRALLOC_TARGET}-static-example-destructor)
        add_executable (${NAME} ${DESTRUCTOR})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
    if (${TRALLOC_REFERENCE})
        set (NAME ${TRALLOC_TARGET}-static-example-reference)
        add_executable (${NAME} ${REFERENCE})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
    if (${TRALLOC_UTILS})
        set (NAME ${TRALLOC_TARGET}-static-example-utils)
        add_executable (${NAME} ${UTILS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
endif ()