set (BASIC      basic/main.c)
set (EVENTS     events/main.c events/add.c events/resize.c events/move.c events/free.c lib/malloc_dynarr.c)
set (HELPERS    helpers/main.c)
set (REFERENCE  reference/main.c reference/shared.c reference/common.c)
set (DESTRUCTOR destructor/main.c destructor/destructor.c lib/malloc_dynarr.c)

set (UTILS utils/main.c)
if (${TRALLOC_UTILS_BUFFER})
    set (UTILS ${UTILS} utils/buffer.c)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-basic)
    add_executable (${NAME} ${BASIC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
    
    set (NAME ${TRALLOC_TARGET}-test-helpers)
    add_executable (${NAME} ${HELPERS})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
    
    if (${TRALLOC_DEBUG})
        set (NAME ${TRALLOC_TARGET}-test-events)
        add_executable (${NAME} ${EVENTS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()

    if (${TRALLOC_DESTRUCTOR})
        set (NAME ${TRALLOC_TARGET}-test-destructor)
        add_executable (${NAME} ${DESTRUCTOR})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
    
    if (${TRALLOC_REFERENCE})
        set (NAME ${TRALLOC_TARGET}-test-reference)
        add_executable (${NAME} ${REFERENCE})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
    
    if (${TRALLOC_UTILS})
        set (NAME ${TRALLOC_TARGET}-test-utils)
        add_executable (${NAME} ${UTILS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET})
        add_test (${NAME} ${NAME})
    endif ()
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-test-basic)
    add_executable (${NAME} ${BASIC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})

    set (NAME ${TRALLOC_TARGET}-static-test-helpers)
    add_executable (${NAME} ${HELPERS})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
    
    if (${TRALLOC_DEBUG})
        set (NAME ${TRALLOC_TARGET}-static-test-events)
        add_executable (${NAME} ${EVENTS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()

    if (${TRALLOC_DESTRUCTOR})
        set (NAME ${TRALLOC_TARGET}-static-test-destructor)
        add_executable (${NAME} ${DESTRUCTOR})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
    
    if (${TRALLOC_REFERENCE})
        set (NAME ${TRALLOC_TARGET}-static-test-reference)
        add_executable (${NAME} ${REFERENCE})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
    
    if (${TRALLOC_UTILS})
        set (NAME ${TRALLOC_TARGET}-static-test-utils)
        add_executable (${NAME} ${UTILS})
        target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
        add_test (${NAME} ${NAME})
    endif ()
endif ()