set (SRC main.c)

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-examples-helpers)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-examples-helpers)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
endif ()