if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-examples-length)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-examples-length-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-static)
    add_test (${NAME} ${NAME})
endif ()