configure_file (${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/config.h)

set (INCLUDES common.h chunk.h helpers.h tree.h types.h config.h)
set (SOURCES  common.c chunk.c helpers.c tree.c)

if (TALLOC_DEBUG MATCHES true)
    set (INCLUDES ${INCLUDES} events.h)
    set (SOURCES  ${SOURCES}  events.c)
endif ()
if (TALLOC_EXT MATCHES true)
    add_subdirectory (ext)
endif ()
if (TALLOC_REFERENCE MATCHES true)
    add_subdirectory (reference)
endif ()
if (TALLOC_UTILS MATCHES true)
    add_subdirectory (utils)
endif ()

if (TALLOC_SHARED MATCHES true)
    add_library (${TALLOC_TARGET} SHARED ${SOURCES})
endif ()

if (TALLOC_STATIC MATCHES true)
    add_library (${TALLOC_TARGET}_static STATIC ${SOURCES})
    set_target_properties (${TALLOC_TARGET}_static PROPERTIES OUTPUT_NAME ${TALLOC_TARGET})
endif ()