configure_file (${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/config.h)

set (INCLUDES common.h chunk.h helpers.h tree.h types.h config.h)
set (SOURCES  common.c chunk.c helpers.c tree.c)

if (${TALLOC_DEBUG})
    set (INCLUDES ${INCLUDES} events.h)
    set (SOURCES  ${SOURCES}  events.c)
endif ()
if (${TALLOC_EXTENSIONS})
    add_subdirectory (extensions)
endif ()
if (${TALLOC_REFERENCE})
    add_subdirectory (reference)
endif ()
if (${TALLOC_UTILS})
    add_subdirectory (utils)
endif ()

if (${TALLOC_SHARED})
    add_library (${TALLOC_TARGET} SHARED ${SOURCES})
endif ()
if (${TALLOC_STATIC})
    add_library (${TALLOC_TARGET}_static STATIC ${SOURCES})
    set_target_properties (${TALLOC_TARGET}_static PROPERTIES OUTPUT_NAME ${TALLOC_TARGET})
endif ()