configure_file (${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/config.h)

install (FILES common.h chunk.h helpers.h tree.h types.h config.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
set (SOURCES common.c chunk.c helpers.c tree.c)

if (${TALLOC_DEBUG})
    install (FILES events.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (SOURCES ${SOURCES} events.c)
endif ()

set (INCLUDEDIR ${CURRENT_INCLUDEDIR})
if (${TALLOC_EXTENSIONS})
    set (CURRENT_INCLUDEDIR "${INCLUDEDIR}/extensions")
    add_subdirectory (extensions)
endif ()
if (${TALLOC_REFERENCE})
    set (CURRENT_INCLUDEDIR "${INCLUDEDIR}/reference")
    add_subdirectory (reference)
endif ()
if (${TALLOC_UTILS})
    set (CURRENT_INCLUDEDIR "${INCLUDEDIR}/utils")
    add_subdirectory (utils)
endif ()

if (${TALLOC_SHARED})
    add_library (${TALLOC_TARGET} SHARED ${SOURCES})
    install (TARGETS ${TALLOC_TARGET} DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif ()
if (${TALLOC_STATIC})
    add_library (${TALLOC_TARGET}_static STATIC ${SOURCES})
    set_target_properties (${TALLOC_TARGET}_static PROPERTIES OUTPUT_NAME ${TALLOC_TARGET})
    install (TARGETS ${TALLOC_TARGET}_static DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif ()